<resources>
    <string name="app_name">Водный баланс</string>
    <string name="add_data">Введите количество выпитой воды \n(в мл)</string>
    <string name="confirm">Подтвердить \n ввод</string>
    <string name="statistics">К статистике</string>
    <string name="settings">Введите данные о себе</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="gender">Ваш пол</string>
    <string name="weight">Введите вес</string>
    <string name="icon">Icon</string>
    <string name="waterAmount">Выпито %.0f мл, что составляет %.3f от нормы</string>
    <string name="toSettings">Пожалуйста, заполните информацию о себе в настройках</string>
    <string name="reference">Справка</string>
    <string name="info"> Знакомство с приложением.\n\n  Для того, чтобы начать отслеживать Ваш водный баланс, в первую очередь необходимо задать настройки и ввести данные о себе. Это необходимо для расчета нормы. Затем выберете напиток (по умолчанию вода), который Вы сегодня пили, подтвердите выбор и укажите количество миллилитров. Не забудьте подтвердить ввод.\n  Во вкладке "Прогресс" можно посмотреть долю выпитого от нормы, отражаемую визуально. \n  Раздел статистики (кнопка "К статистике") поможет отследить, сколько было употреблено жидкостей в тот или иной день. \n  Отображеие статистики в графической форме (кнопка "К графику") покажет общую картину употребления жидкостей от нормы за месяц\n\nРекомендации\n\n  1. Жидкости рекомендуется пить равномерно в течение дня, за один приём не стоит употреблять всю дневную норму.\n  2. Когда на улице жарко, человек больше потеет, а это требует возмещения потерянной жидкости в виде ее дополнительного употребления.\n  3. У людей, которые испытывают повышенные нагрузки на тренировках и спортивных занятиях, происходит повышение температуры и ускорение сердечного ритма, что значительно увеличивает потребность во влаге. В такой момент следует восстановить свой водный баланс, чтобы освежиться и восполнить запасы энергии.\n  4. При отдельных заболеваниях врачи часто рассчитывают, количество воды в день, которое должен пить человек, и рекомендуют повышать употребление жидкости. Если человек страдает почечной недостаточностью и некоторыми патологиями сердца, то ему, напротив, следует уменьшать количество выпитого.\n  5. Насильно заставлять себя потреблять жидкость не нужно, необходимо постепенно приучать себя пить воду, но помнить стоит, что ощущение жажды у людей при постоянном «недопивании» притупляется, нарушается осмысление ими потребности организма в воде.  </string>
    <string name="today">Сегодня</string>
    <string name="Graph">К графику</string>
    <string name="Settings">Ввести данные</string>
    <string name="Menu">Начните следить за своим употребленим воды легко и удобно!</string>
</resources>
